src/styles/Horoscopes.css
.zodiac-div {
  height: 5rem;
  width: 5rem;
  margin: 0.1rem;
  padding: 0;
}
.box-horoscope {
  width: 25rem;
  max-width: 90vw;
  height: auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  flex-wrap: wrap;
  gap: 0.5em;
}
.wrap-horoscope {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.btn-horoscope {
  margin-top: 3rem;
}

.horoscope-result {
  text-align: center;
}

.blinking {
  animation-name: blinking;
  animation-duration: 3s;
  animation-iteration-count: 100;
}

@keyframes blinking {
  50% {
    border-color: var(--white);
    color: var(--white);
  }
}

